[gd_scene load_steps=9 format=3 uid="uid://dxd3mv8lt6ll1"]

[ext_resource type="Script" path="res://scene/mini_games/egg_reborn/egg_reborn.gd" id="1_atwvt"]
[ext_resource type="Texture2D" uid="uid://dgn6nw13u5t32" path="res://scene/mini_games/egg_reborn/player.png" id="1_wrlpp"]
[ext_resource type="PackedScene" uid="uid://cj2n0uempqg40" path="res://scene/mini_games/egg/egg_rb.tscn" id="2_5s5ew"]
[ext_resource type="Texture2D" uid="uid://oupu3bl1434" path="res://scene/mini_games/egg_reborn/player2.png" id="3_d6w0n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_unj2y"]
atlas = ExtResource("1_wrlpp")
region = Rect2(168, 0, 84, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh7ho"]
atlas = ExtResource("1_wrlpp")
region = Rect2(0, 0, 84, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki8uj"]
atlas = ExtResource("1_wrlpp")
region = Rect2(84, 0, 84, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jbtv7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unj2y")
}],
"loop": true,
"name": &"catch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh7ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki8uj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="EggReborn" type="Node"]
script = ExtResource("1_atwvt")

[node name="player" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_jbtv7")
animation = &"idle"
centered = false

[node name="Area2D" type="Area2D" parent="player"]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="player/Area2D"]
polygon = PackedVector2Array(33, 34, 39, 37, 46, 37, 52, 34, 52, 39, 47, 42, 38, 42, 33, 39)

[node name="Egg_RigidBody2D" parent="." instance=ExtResource("2_5s5ew")]
position = Vector2(42, 5)

[node name="Player2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_d6w0n")
centered = false

[node name="SceneTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 84.0
offset_bottom = 48.0

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 5.0
step = 0.25
value = 5.0
show_percentage = false
